feat: Add `failed-instrumentations.json` and `test-instrumentations.json` files and update `.gitignore` to exclude their copies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 concert-calendar/api-key.sh
 concert-calendar/emic-events-2014-2025.txt
+failed-instrumentations-copy.json
+test-instrumentations-copy.json
